# EstimyCar

./: .coverage  .gitignore  DC.ipynb  ML.ipynb  README.html  README.md  SLIT.ipynb  WS.ipynb  accueil.py  app.py  coverage.json  datacleaning.py  fonctions_menu.py  fonctions_requete.py  fonctions_tab.py  homepage.py  inline_fragment.css  machinelearning.py  marques_modeles.py  menu_acheteur.py  menu_vendeur.py  pyproject.toml  requete_dataframe.py  requetes_dataframe.py  requetes_kpi.py  requetes_stats.py  requetes_val_unique.py  slides.html  slides.ipynb  slides.qmd  streamlit_app.py  test.py  webscraping.py
cv_results/: DACIA_KNeighbors_results.json  DACIA_LinearRegression_results.json  DACIA_RandomForest_results.json  PORSCHE_KNeighbors_results.json  PORSCHE_LinearRegression_results.json  PORSCHE_RandomForest_results.json
cv_results_leaf/: ABARTH_RandomForest_results.json  ALFA ROMEO_RandomForest_results.json  ALPINE_RandomForest_results.json  AUDI_RandomForest_results.json  BMW_RandomForest_results.json  CHEVROLET_RandomForest_results.json  CITROEN_RandomForest_results.json  CUPRA_RandomForest_results.json  DACIA_RandomForest_results.json  DS_RandomForest_results.json  FERRARI_RandomForest_results.json  FIAT_RandomForest_results.json  FORD_RandomForest_results.json  HONDA_RandomForest_results.json  HYUNDAI_RandomForest_results.json  IVECO_RandomForest_results.json  JAGUAR_RandomForest_results.json  JEEP_RandomForest_results.json  KIA_RandomForest_results.json  LAND ROVER_RandomForest_results.json  LEXUS_RandomForest_results.json  MASERATI_RandomForest_results.json  (+18 more)
(+238 files in other folders)
