[tool.poetry]
name = "estimycar"
version = "0.9.0"
description = "Estimateur de prix de véhicule basé sur des annonces scrapées depuis le site lacentrale.fr"
authors = ["Hassan TILKI, Aybuke BICAT"]
license = "à determiner"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.4"
requests = "^2.28.1"
bs4 = "^0.0.1"
duckdb = "^0.9.2"
streamlit = "^1.29.0"
plotly = "^5.18.0"
dataclasses = "^0.6"
serde = "^0.9.0"
numpy = "^1.24.3"
scikit-learn = "1.2.1"
joblib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
